# SoliCurses

./: CMakeLists.txt  Makefile  README.md  main.cpp
src/: Card.cpp  Card.hpp  Consts.h  Consts.hpp  Cursor.hpp  DrawType.h  GameBoard.cpp  GameBoard.hpp  Key.h  main.cpp  main.hpp
src/Solitaire/: Card.cpp  Card.hpp  Cursor.cpp  GameBoard.cpp  GameBoard.hpp  Key.hpp  Vector.hpp
